TopBottomLCC is now LayerLCC, which allows more flexibility in defining layers.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -194,28 +194,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subtle-organ",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Region growing with building points as initial seed points.\n",
-    "building_grower = growing.LabelConnectedComp(Labels.BUILDING, octree_level=10, min_component_size=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "bfe6c884-319c-42e1-9534-b438c323646a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can also do this separately for the top and bottom since the best settings for each might differ.\n",
-    "building_top_params = {'plane_height': 12., 'octree_level': 9, 'threshold': 0.5}\n",
-    "building_bottom_params = {'plane_height': 12., 'octree_level': 10, 'threshold': 0.5}\n",
+    "# We do this separately for the top and bottom since the best settings for each might differ.\n",
+    "building_top = {'bottom': 12., 'octree_level': 9, 'threshold': 0.5}\n",
+    "building_bottom = {'bottom': 0.5, 'top': 12., 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
-    "building_grower = growing.TopBottomLCC(Labels.BUILDING, ahn_reader, \n",
-    "                                       top_params=building_top_params, \n",
-    "                                       bottom_params=building_bottom_params)"
+    "building_grower = growing.LayerLCC(Labels.BUILDING, ahn_reader, \n",
+    "                                   params=[building_top, building_bottom])"
    ]
   },
   {
@@ -237,24 +225,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "light_top_params = {'plane_height': 1.75, 'octree_level': 9, 'threshold': 0.05}\n",
-    "light_bottom_params = {'plane_height': 1.75, 'octree_level': 10, 'threshold': 0.5}\n",
+    "light_top = {'bottom': 1.75, 'octree_level': 9, 'threshold': 0.05}\n",
+    "light_bottom = {'top': 1.75, 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
-    "sign_top_params = {'plane_height': 1.5, 'octree_level': 9, 'threshold': 0.05}\n",
-    "sign_bottom_params = {'plane_height': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
+    "sign_top = {'bottom': 1.5, 'octree_level': 9, 'threshold': 0.05}\n",
+    "sign_bottom = {'top': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
-    "tree_top_params = {'plane_height': 1.75, 'octree_level': 9, 'threshold': 0.01}\n",
-    "tree_bottom_params = {'plane_height': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
+    "tree_top = {'bottom': 1.75, 'octree_level': 9, 'threshold': 0.01}\n",
+    "tree_bottom = {'top': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
     "\n",
-    "light_grower = growing.TopBottomLCC(Labels.STREET_LIGHT, ahn_reader, \n",
-    "                                    top_params=light_top_params, \n",
-    "                                    bottom_params=light_bottom_params)\n",
-    "sign_grower = growing.TopBottomLCC(Labels.TRAFFIC_SIGN, ahn_reader, \n",
-    "                                   top_params=sign_top_params, \n",
-    "                                   bottom_params=sign_bottom_params)\n",
-    "tree_grower = growing.TopBottomLCC(Labels.TREE, ahn_reader, \n",
-    "                                   top_params=tree_top_params, \n",
-    "                                   bottom_params=tree_bottom_params)"
+    "light_grower = growing.LayerLCC(Labels.STREET_LIGHT, ahn_reader, \n",
+    "                                params=[light_top, light_bottom])\n",
+    "sign_grower = growing.LayerLCC(Labels.TRAFFIC_SIGN, ahn_reader, \n",
+    "                               params=[sign_top, sign_bottom])\n",
+    "tree_grower = growing.LayerLCC(Labels.TREE, ahn_reader, \n",
+    "                               params=[tree_top, tree_bottom])"
    ]
   },
   {
