--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -156,32 +156,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# All possible parameters:\n",
-    "# params = {'plane_height': REQUIRED,  # Height above ground at which to start/stop (for top/bottom) growing.\n",
-    "#           'octree_level': 9,         # Octree level for LCC method, higher means more fine-grained.\n",
-    "#           'min_comp_size': 100,      # Minimum number of points for a component to be considered.\n",
-    "#           'threshold': 0.5}          # Minimum fraction of points in a component that are already labelled initially for the component to be added.\n",
+    "# Each layer has the following (default) parameters:\n",
+    "# params = {'bottom': -inf,        # Height above ground at which the layer starts.\n",
+    "#           'top': inf,            # Height above ground at which the layer stops.\n",
+    "#           'octree_level': 9,     # Octree level for LCC method, higher means more fine-grained.\n",
+    "#           'min_comp_size': 100,  # Minimum number of points for a component to be considered.\n",
+    "#           'threshold': 0.5}      # Minimum fraction of points in a component that are already labelled initially for the component to be added.\n",
     "\n",
-    "# Parameter settings for top and bottom growing.\n",
-    "light_top_params = {'plane_height': 3.25, 'threshold': 0.05}\n",
-    "light_bottom_params = {'plane_height': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
+    "# Parameter settings for the different layers.\n",
+    "light_top = {'bottom': 1.75, 'octree_level': 9, 'threshold': 0.05}\n",
+    "light_bottom = {'top': 1.75, 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
-    "sign_top_params = {'plane_height': 1.5, 'threshold': 0.05}\n",
-    "sign_bottom_params = {'plane_height': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
+    "sign_top = {'bottom': 1.5, 'octree_level': 9, 'threshold': 0.05}\n",
+    "sign_bottom = {'top': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
-    "tree_top_params = {'plane_height': 1.75, 'octree_level': 9, 'threshold': 0.01}\n",
-    "tree_bottom_params = {'plane_height': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
+    "tree_top = {'bottom': 1.75, 'octree_level': 9, 'threshold': 0.01}\n",
+    "tree_bottom = {'top': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
     "\n",
     "# Create the region growing objects.\n",
-    "light_lcc = growing.TopBottomLCC(Labels.STREET_LIGHT, ahn_reader, \n",
-    "                                 top_params=light_top_params, \n",
-    "                                 bottom_params=light_bottom_params)\n",
-    "sign_lcc = growing.TopBottomLCC(Labels.TRAFFIC_SIGN, ahn_reader, \n",
-    "                                top_params=sign_top_params, \n",
-    "                                bottom_params=sign_bottom_params)\n",
-    "tree_lcc = growing.TopBottomLCC(Labels.TREE, ahn_reader, \n",
-    "                                top_params=tree_top_params, \n",
-    "                                bottom_params=tree_bottom_params)"
+    "light_grower = growing.LayerLCC(Labels.STREET_LIGHT, ahn_reader, \n",
+    "                                params=[light_top, light_bottom])\n",
+    "sign_grower = growing.LayerLCC(Labels.TRAFFIC_SIGN, ahn_reader, \n",
+    "                               params=[sign_top, sign_bottom])\n",
+    "tree_grower = growing.LayerLCC(Labels.TREE, ahn_reader, \n",
+    "                               params=[tree_top, tree_bottom])"
    ]
   },
   {
