--- a/notebooks/5. Region growing.ipynb
+++ b/notebooks/5. Region growing.ipynb
@@ -20,10 +20,9 @@
     "# Add project src to path.\n",
     "import set_path\n",
     "\n",
-    "import time\n",
-    "\n",
-    "from src.utils.labels import Labels\n",
     "import src.region_growing as growing\n",
+    "import src.utils.ahn_utils as ahn_utils\n",
+    "from src.utils.labels import Labels\n",
     "from src.pipeline import Pipeline"
    ]
   },
@@ -33,6 +32,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Select the file to process. The outfile can be set to 'None' to overwrite the file.\n",
+    "tilecode = '2386_9702'\n",
+    "\n",
+    "in_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
+    "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
+    "\n",
     "# In this example we want to grow the building points, the initial seed points.\n",
     "# The ground points must be removed to fast and properly cluster the cloud.\n",
     "exclude_labels = (Labels.GROUND,)"
@@ -59,7 +64,7 @@
    "outputs": [],
    "source": [
     "# Region growing with building points as initial seed points. \n",
-    "region_growing_pcl = growing.RegionGrowing(label=Labels.BUILDING, exclude_labels=exclude_labels)"
+    "region_growing_pcl = growing.RegionGrowing(label=Labels.BUILDING)"
    ]
   },
   {
@@ -84,15 +89,53 @@
    "outputs": [],
    "source": [
     "# Region growing with building points as initial seed points. \n",
-    "region_growing_clustering = growing.LabelConnectedComp(label=Labels.BUILDING, exclude_labels=exclude_labels,\n",
-    "                                                       octree_level=10, min_component_size=100)"
+    "region_growing_clustering = growing.LabelConnectedComp(label=Labels.BUILDING,\n",
+    "                                                       octree_level=10,\n",
+    "                                                       min_component_size=100)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Process point clouds and save the results"
+    "### Layered LCC region growing\n",
+    "\n",
+    "Sometimes we want to use different parameters for region growing, depending on the height above ground level. For example, close to the ground we expect more clutter, so a more fine-grained approach might be needed, while higher up we can use coarsed clusters.\n",
+    "\n",
+    "For this, we can use a LayerLCC region grower, which accepts different parameters for different 'layers' of the point cloud. Each layer has the following (default) parameters:\n",
+    "\n",
+    "```\n",
+    "params = {'bottom': -inf,        # Height above ground at which the layer starts.\n",
+    "          'top': inf,            # Height above ground at which the layer stops.\n",
+    "          'octree_level': 9,     # Octree level for LCC method, higher means more fine-grained.\n",
+    "          'min_comp_size': 100,  # Minimum number of points for a component to be considered.\n",
+    "          'threshold': 0.5}      # Minimum fraction of points in a component that are already \n",
+    "                                 # labelled initially for the component to be added.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "building_top = {'bottom': 12., 'octree_level': 9, 'threshold': 0.5}\n",
+    "building_bottom = {'bottom': 0.5, 'top': 12., 'octree_level': 10, 'threshold': 0.5}\n",
+    "\n",
+    "# We need AHN elevation data to determine the height above ground.\n",
+    "ahn_data_folder = '../datasets/ahn/'\n",
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
+    "\n",
+    "layered_region_growing = growing.LayerLCC(Labels.BUILDING, ahn_reader, \n",
+    "                                          params=[building_top, building_bottom])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set-up pipeline"
    ]
   },
   {
@@ -103,7 +146,7 @@
    "source": [
     "# Set-up region growing based on PCL pipeline.\n",
     "growers = (region_growing_pcl,)\n",
-    "pipeline = Pipeline(process_sequence=growers)"
+    "pipeline = Pipeline(process_sequence=growers, exclude_labels=exclude_labels)"
    ]
   },
   {
@@ -114,14 +157,25 @@
    "source": [
     "# Set-up clustering based region growing pipeline.\n",
     "growers = (region_growing_clustering,)\n",
-    "pipeline = Pipeline(process_sequence=growers)"
+    "pipeline = Pipeline(process_sequence=growers, exclude_labels=exclude_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set-up layer based region growing pipeline.\n",
+    "growers = (layered_region_growing,)\n",
+    "pipeline = Pipeline(process_sequence=growers, exclude_labels=exclude_labels)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Process a single file"
+    "### Process the LAS file"
    ]
   },
   {
@@ -130,50 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select the file to process. The outfile can be set to 'None' to overwrite the file.\n",
-    "tilecode = '2386_9702'\n",
-    "\n",
-    "in_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
-    "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
-    "\n",
-    "# Process the file.\n",
-    "start = time.time()\n",
-    "pipeline.process_file(in_file, out_file=out_file)\n",
-    "end = time.time()\n",
-    "print(f'Tile labelled in {end-start:.2f} seconds.')"
+    "pipeline.process_file(in_file, out_file=out_file)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Process a folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select the folder to process. \n",
-    "in_folder = '../datasets/pointcloud/'\n",
-    "# Output folder. 'None' uses the input folder.\n",
-    "out_folder = None\n",
-    "# Suffix to add to the filename of processed files. An empty string indicates \n",
-    "# that the same filename is kept; when out_folder=None this means overwriting.\n",
-    "suffix = '_grown'\n",
-    "\n",
-    "# Process the folder.\n",
-    "pipeline.process_folder(in_folder, out_folder=out_folder, suffix=suffix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
