Improved tree growing by using three layers in the LayerLCC.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -225,21 +225,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "light_top = {'bottom': 1.75, 'octree_level': 9, 'threshold': 0.05}\n",
     "light_bottom = {'top': 1.75, 'octree_level': 10, 'threshold': 0.5}\n",
+    "light_top = {'bottom': 1.75, 'octree_level': 9, 'threshold': 0.05}\n",
     "\n",
-    "sign_top = {'bottom': 1.5, 'octree_level': 9, 'threshold': 0.05}\n",
     "sign_bottom = {'top': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
+    "sign_top = {'bottom': 1.5, 'octree_level': 9, 'threshold': 0.05}\n",
     "\n",
-    "tree_top = {'bottom': 1.75, 'octree_level': 9, 'threshold': 0.01}\n",
     "tree_bottom = {'top': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
+    "tree_middle = {'bottom': 1.75, 'top':10.0, 'octree_level': 9, 'threshold': 0.01}\n",
+    "tree_top = {'bottom': 6.0, 'octree_level': 8, 'threshold': 0.01}\n",
     "\n",
     "light_grower = growing.LayerLCC(Labels.STREET_LIGHT, ahn_reader, \n",
-    "                                params=[light_top, light_bottom])\n",
+    "                                params=[light_bottom, light_top])\n",
     "sign_grower = growing.LayerLCC(Labels.TRAFFIC_SIGN, ahn_reader, \n",
-    "                               params=[sign_top, sign_bottom])\n",
-    "tree_grower = growing.LayerLCC(Labels.TREE, ahn_reader, \n",
-    "                               params=[tree_top, tree_bottom])"
+    "                               params=[sign_bottom, sign_top])\n",
+    "tree_grower = growing.LayerLCC(Labels.TREE, ahn_reader, reset_noise=True,\n",
+    "                               params=[tree_bottom, tree_middle, tree_top])"
    ]
   },
   {
