Improvements to buildings, cars, and trees. (#22)
* Building fuser now uses both AHN and BGT.

* TopBottomLCC is now LayerLCC, which allows more flexibility in defining layers.

* Improved default dimensions for cars.

* Improved tree growing by using three layers in LayerLCC.

* Small bug fixes.

* Updated datasets, second demo tile added.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -45,6 +45,8 @@
     "ahn_data_folder = '../datasets/ahn/'\n",
     "# File with BGT road polygons.\n",
     "bgt_road_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
+    "# File with BGT building polygons.\n",
+    "bgt_building_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
     "# File with <x,y> coordinates of pole-like objects.\n",
     "bgt_point_file = '../datasets/bgt/custom_points_demo.csv'\n",
     "\n",
@@ -93,9 +95,8 @@
     "# Ground fuser using pre-processed AHN data.\n",
     "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder,\n",
     "                                   method='npz', target='ground', epsilon=0.2)\n",
-    "# Building fuser using pre-processed AHN data.\n",
-    "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder,\n",
-    "                                     method='npz', target='building', epsilon=0.2)"
+    "# Building fuser using BGT building footprint data and AHN data for the maximum height, if available.\n",
+    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=0.25, bgt_file=bgt_building_file, ahn_reader=ahn_reader)"
    ]
   },
   {
@@ -138,11 +139,11 @@
    "outputs": [],
    "source": [
     "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, \n",
-    "                            bgt_file=bgt_road_file, octree_level=10,\n",
-    "                            min_component_size=1000, max_above_ground=3,\n",
-    "                            min_width_thresh=1.5, max_width_thresh=2.55,\n",
-    "                            min_length_thresh=2.0, max_length_thresh=7.0)"
+    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_road_file,\n",
+    "                            octree_level=10, min_component_size=5000,\n",
+    "                            min_height=1.2, max_height=2.4,\n",
+    "                            min_width=1.4, max_width=2.4,\n",
+    "                            min_length=3.0, max_length=6.0)"
    ]
   },
   {
@@ -193,28 +194,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subtle-organ",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Region growing with building points as initial seed points.\n",
-    "building_grower = growing.LabelConnectedComp(Labels.BUILDING, octree_level=10, min_component_size=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "bfe6c884-319c-42e1-9534-b438c323646a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can also do this separately for the top and bottom since the best settings for each might differ.\n",
-    "building_top_params = {'plane_height': 2., 'octree_level': 10, 'threshold': 0.1}\n",
-    "building_bottom_params = {'plane_height': 2., 'octree_level': 10, 'threshold': 0.8}\n",
+    "# We do this separately for the top and bottom since the best settings for each might differ.\n",
+    "building_top = {'bottom': 12., 'octree_level': 9, 'threshold': 0.5}\n",
+    "building_bottom = {'bottom': 0.5, 'top': 12., 'octree_level': 10, 'threshold': 0.5}\n",
     "\n",
-    "building_grower = growing.TopBottomLCC(Labels.BUILDING, ahn_reader, \n",
-    "                                       top_params=building_top_params, \n",
-    "                                       bottom_params=building_bottom_params)"
+    "building_grower = growing.LayerLCC(Labels.BUILDING, ahn_reader, \n",
+    "                                   params=[building_top, building_bottom])"
    ]
   },
   {
@@ -236,24 +225,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "light_top_params = {'plane_height': 1.75, 'octree_level': 9, 'threshold': 0.05}\n",
-    "light_bottom_params = {'plane_height': 1.75, 'octree_level': 10, 'threshold': 0.5}\n",
+    "light_bottom = {'top': 1.75, 'octree_level': 10, 'threshold': 0.5}\n",
+    "light_top = {'bottom': 1.75, 'octree_level': 9, 'threshold': 0.05}\n",
     "\n",
-    "sign_top_params = {'plane_height': 1.5, 'octree_level': 9, 'threshold': 0.05}\n",
-    "sign_bottom_params = {'plane_height': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
+    "sign_bottom = {'top': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
+    "sign_top = {'bottom': 1.5, 'octree_level': 9, 'threshold': 0.05}\n",
     "\n",
-    "tree_top_params = {'plane_height': 1.75, 'octree_level': 9, 'threshold': 0.01}\n",
-    "tree_bottom_params = {'plane_height': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
+    "tree_bottom = {'top': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
+    "tree_middle = {'bottom': 1.75, 'top':10.0, 'octree_level': 9, 'threshold': 0.01}\n",
+    "tree_top = {'bottom': 6.0, 'octree_level': 8, 'threshold': 0.01}\n",
     "\n",
-    "light_grower = growing.TopBottomLCC(Labels.STREET_LIGHT, ahn_reader, \n",
-    "                                    top_params=light_top_params, \n",
-    "                                    bottom_params=light_bottom_params)\n",
-    "sign_grower = growing.TopBottomLCC(Labels.TRAFFIC_SIGN, ahn_reader, \n",
-    "                                   top_params=sign_top_params, \n",
-    "                                   bottom_params=sign_bottom_params)\n",
-    "tree_grower = growing.TopBottomLCC(Labels.TREE, ahn_reader, \n",
-    "                                   top_params=tree_top_params, \n",
-    "                                   bottom_params=tree_bottom_params)"
+    "light_grower = growing.LayerLCC(Labels.STREET_LIGHT, ahn_reader, \n",
+    "                                params=[light_bottom, light_top])\n",
+    "sign_grower = growing.LayerLCC(Labels.TRAFFIC_SIGN, ahn_reader, \n",
+    "                               params=[sign_bottom, sign_top])\n",
+    "tree_grower = growing.LayerLCC(Labels.TREE, ahn_reader, reset_noise=True,\n",
+    "                               params=[tree_bottom, tree_middle, tree_top])"
    ]
   },
   {
@@ -273,7 +260,7 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, noise_filter, npz_building_fuser, car_fuser, tree_fuser,\n",
+    "process_sequence = (npz_ground_fuser, noise_filter, bgt_building_fuser, car_fuser, tree_fuser,\n",
     "                    light_fuser, sign_fuser, building_grower, light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(process_sequence)"
    ]
@@ -295,7 +282,8 @@
    "outputs": [],
    "source": [
     "# Select the file to process.\n",
-    "tile_code = '2386_9702'\n",
+    "tile_code = '2386_9702'  # Demo tile 1.\n",
+    "#tile_code = '2397_9705'  # Demo tile 2.\n",
     "\n",
     "in_file = '../datasets/pointcloud/filtered_' + tile_code + '.laz'\n",
     "out_file = '../datasets/pointcloud/processed_' + tile_code + '.laz'"
