--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -7,13 +7,11 @@
    "source": [
     "# Automatic labelling of ground and buildings using data fusion\n",
     "\n",
-    "We build a `FusionPipeline` with different `DataFusers`, each of which labels a particular type of object. The result is a labelled pointcloud, where labels are stored in the LAS extra_dim `label`.\n",
+    "We have several options available to label ground and buildings:\n",
     "\n",
-    "There are different types of data fusers available:\n",
-    "- `AHNFuser(..., method='npz')`: use pre-processed AHN data to label ground and building points\n",
-    "- `AHNFuser(..., method='geotiff')`: use GeoTIFF data to label only ground points.\n",
-    "\n",
-    "The `FusionPipeline` supports processing a single file, or batch-processing a folder."
+    "* Using pre-processed AHN point clouds for ground and buildings.\n",
+    "* Using AHN GeoTIFF data for ground.\n",
+    "* Using BGT data for buidings (possibly combined with AHN)."
    ]
   },
   {
@@ -27,8 +25,6 @@
     "import set_path\n",
     "\n",
     "# Import modules.\n",
-    "import time\n",
-    "\n",
     "import src.fusion as fusion\n",
     "from src.pipeline import Pipeline\n",
     "import src.utils.ahn_utils as ahn_utils\n",
@@ -57,13 +53,15 @@
    "source": [
     "# Data folder for the fusers.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
+    "# Create the reader for .npz data.\n",
+    "npz_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
     "\n",
     "# Ground fuser using pre-processed AHN data.\n",
-    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder,\n",
-    "                                   method='npz', target='ground', epsilon=0.2)\n",
+    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder, ahn_reader=npz_reader,\n",
+    "                                   target='ground', epsilon=0.2)\n",
     "# Building fuser using pre-processed AHN data.\n",
-    "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder,\n",
-    "                                     method='npz', target='building', epsilon=0.2)"
+    "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder, ahn_reader=npz_reader,\n",
+    "                                     target='building', epsilon=0.2)"
    ]
   },
   {
@@ -106,12 +104,14 @@
    "source": [
     "# Data folder for the AHN fuser.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
+    "# Create the reader for GeoTIFF data. See the class documentation for details on filling gaps and smoothening.\n",
+    "geotiff_reader = ahn_utils.GeoTIFFReader(ahn_data_folder,\n",
+    "                                         fill_gaps=True, max_gap_size=100,\n",
+    "                                         smoothen=True, smooth_thickness=2)\n",
     "\n",
     "# Ground fuser using AHN GeoTIFF data.\n",
-    "geotiff_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder,\n",
-    "                                       method='geotiff', target='ground', epsilon=0.2,\n",
-    "                                       fill_gaps=True, max_gap_size=100,\n",
-    "                                       smoothen=True, smooth_thickness=2)"
+    "geotiff_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder, ahn_reader=geotiff_reader,\n",
+    "                                       target='ground', epsilon=0.2)"
    ]
   },
   {
@@ -154,8 +154,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data folder and file for the BGT fuser.\n",
+    "bgt_data_file = '../datasets/bgt/bgt_buildings.csv'\n",
+    "\n",
     "# Building fuser using BGT building footprint data.\n",
-    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=1, bgt_file=bgt_data_file)"
+    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_file=bgt_data_file, building_offset=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df9bf256-a553-4f8c-8afe-e4f69e5a3472",
+   "metadata": {},
+   "source": [
+    "### [Alternative] Building fuser using both BGT and AHN data\n",
+    "In this case, BGT will be used to define the <x, y> boundaries using the footprint polygon, and AHN data will be used to define the height <z> boundary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac63d273-f00c-4ff1-bcd0-9f1d14aeeacf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note: this only works with .npz (pre-processed) AHN data, since GeoTIFF does not contain building data.\n",
+    "bgt_ahn_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_file=bgt_data_file, \n",
+    "                                                 building_offset=0.25, ahn_reader=npz_reader)"
    ]
   },
   {
@@ -193,6 +217,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26876fa2-76b5-4c76-94e0-b1aee7de8873",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BEST OPTION: Set-up AHN + BGT pipeline.\n",
+    "fusers = (npz_ground_fuser, bgt_ahn_building_fuser)\n",
+    "pipeline = Pipeline(process_sequence=fusers)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "69b5febb",
    "metadata": {},
@@ -214,37 +250,7 @@
     "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "\n",
     "# Process the file.\n",
-    "start = time.time()\n",
-    "pipeline.process_file(in_file, out_file=out_file)\n",
-    "end = time.time()\n",
-    "print(f'Tile labelled in {end-start:.2f} seconds.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c57e2e7a-a63d-4dfa-83b2-2f825096bcf9",
-   "metadata": {},
-   "source": [
-    "### Process a folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bea136b-8f9b-4335-871a-a106f93a1c55",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select the folder to process. \n",
-    "in_folder = '../datasets/pointcloud/'\n",
-    "# Output folder. 'None' uses the input folder.\n",
-    "out_folder = None\n",
-    "# Suffix to add to the filename of processed files. An empty string indicates \n",
-    "# that the same filename is kept; when out_folder=None this means overwriting.\n",
-    "suffix = '_labelled'\n",
-    "\n",
-    "# Process the folder.\n",
-    "pipeline.process_folder(in_folder, out_folder=out_folder, suffix=suffix)"
+    "pipeline.process_file(in_file, out_file=out_file)"
    ]
   },
   {
