--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -201,8 +201,8 @@
    "outputs": [],
    "source": [
     "# Set-up full AHN pipeline.\n",
-    "fusers = (npz_ground_fuser, npz_building_fuser)\n",
-    "pipeline = Pipeline(process_sequence=fusers)"
+    "process_sequence = (npz_ground_fuser, npz_building_fuser)\n",
+    "pipeline = Pipeline(processors=process_sequence, caching=False)"
    ]
   },
   {
@@ -213,8 +213,8 @@
    "outputs": [],
    "source": [
     "# ALTERNATIVE: Set-up AHN GeoTIFF + BGT pipeline.\n",
-    "fusers = (geotiff_ground_fuser, bgt_building_fuser)\n",
-    "pipeline = Pipeline(process_sequence=fusers)"
+    "process_sequence = (geotiff_ground_fuser, bgt_building_fuser)\n",
+    "pipeline = Pipeline(processors=process_sequence, caching=False)"
    ]
   },
   {
@@ -225,8 +225,8 @@
    "outputs": [],
    "source": [
     "# BEST OPTION: Set-up AHN + BGT pipeline.\n",
-    "fusers = (npz_ground_fuser, bgt_ahn_building_fuser)\n",
-    "pipeline = Pipeline(process_sequence=fusers)"
+    "process_sequence = (npz_ground_fuser, bgt_ahn_building_fuser)\n",
+    "pipeline = Pipeline(processors=process_sequence, caching=False)"
    ]
   },
   {
