--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -137,7 +137,7 @@
    "source": [
     "# Set-up the order in how we want to label.\n",
     "process_sequence = (car_fuser,)\n",
-    "pipeline = Pipeline(process_sequence=process_sequence, exclude_labels=exclude_labels)"
+    "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
    ]
   },
   {
