--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -125,7 +125,7 @@
     "# Process the point cloud.\n",
     "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.CAR)\n",
     "process_sequence = (tree_fuser, light_fuser, sign_fuser)\n",
-    "pipeline = Pipeline(process_sequence, exclude_labels)\n",
+    "pipeline = Pipeline(process_sequence, exclude_labels, caching=False)\n",
     "\n",
     "start = time.time()\n",
     "labels = pipeline.process_cloud(tilecode, points, labels)\n",
@@ -192,7 +192,7 @@
     "# Process the point cloud.\n",
     "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.CAR, Labels.TREE, Labels.STREET_LIGHT, Labels.TRAFFIC_SIGN)\n",
     "process_sequence = (light_lcc, sign_lcc, tree_lcc)\n",
-    "pipeline = Pipeline(process_sequence, exclude_labels)\n",
+    "pipeline = Pipeline(process_sequence, exclude_labels, caching=False)\n",
     "\n",
     "start = time.time()\n",
     "labels = pipeline.process_cloud(tilecode, points, labels)\n",
