--- a/notebooks/5. Region growing.ipynb
+++ b/notebooks/5. Region growing.ipynb
@@ -145,8 +145,8 @@
    "outputs": [],
    "source": [
     "# Set-up region growing based on PCL pipeline.\n",
-    "growers = (region_growing_pcl,)\n",
-    "pipeline = Pipeline(process_sequence=growers, exclude_labels=exclude_labels)"
+    "process_sequence = (region_growing_pcl,)\n",
+    "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
    ]
   },
   {
@@ -156,8 +156,8 @@
    "outputs": [],
    "source": [
     "# Set-up clustering based region growing pipeline.\n",
-    "growers = (region_growing_clustering,)\n",
-    "pipeline = Pipeline(process_sequence=growers, exclude_labels=exclude_labels)"
+    "process_sequence = (region_growing_clustering,)\n",
+    "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
    ]
   },
   {
@@ -167,8 +167,8 @@
    "outputs": [],
    "source": [
     "# Set-up layer based region growing pipeline.\n",
-    "growers = (layered_region_growing,)\n",
-    "pipeline = Pipeline(process_sequence=growers, exclude_labels=exclude_labels)"
+    "process_sequence = (layered_region_growing,)\n",
+    "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
    ]
   },
   {
