Comment tile code

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -287,7 +287,7 @@
    "source": [
     "# Select the file to process.\n",
     "tile_code = '2386_9702'  # Demo tile 1.\n",
-    "tile_code = '2397_9705'  # Demo tile 2.\n",
+    "# tile_code = '2397_9705'  # Demo tile 2.\n",
     "\n",
     "in_file = '../datasets/pointcloud/filtered_' + tile_code + '.laz'\n",
     "out_file = '../datasets/pointcloud/processed_' + tile_code + '.laz'"
