Caching of AHN tiles and interpolation data (#24)
* Added cashing for AHN data.

* Added caching of interpolation data.

* Omit region_growing from module __init__ to prevent open3d-ml loading unnecessarily.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -7,7 +7,11 @@
    "source": [
     "# Urban PointCloud Processing\n",
     "\n",
-    "This notebook shows a \"complete solution\" in which a single point cloud file is automatically labeled using the various tools available in this repository. For clarity we skip [preprocessing of AHN data](1.%20AHN%20preprocessing.ipynb) and assume all necassary data files are already available."
+    "This notebook shows a \"complete solution\" in which a single point cloud file is automatically labeled using the various tools available in this repository. For clarity we skip [preprocessing of AHN data](1.%20AHN%20preprocessing.ipynb) and assume all necassary data files are already available.\n",
+    "\n",
+    "We build a `Pipeline` with different `Processors`, each of which labels a particular type of object. The result is a labelled pointcloud, where labels are stored in the LAS extra_dim `label`.\n",
+    "\n",
+    "The `Pipeline` supports processing a single file, or batch-processing a folder."
    ]
   },
   {
@@ -35,28 +39,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cf2883a-1fd1-4c20-849f-5f7103c802a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set-up.\n",
-    "\n",
-    "# AHN data folder.\n",
-    "ahn_data_folder = '../datasets/ahn/'\n",
-    "# File with BGT road polygons.\n",
-    "bgt_road_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
-    "# File with BGT building polygons.\n",
-    "bgt_building_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
-    "# File with <x,y> coordinates of pole-like objects.\n",
-    "bgt_point_file = '../datasets/bgt/custom_points_demo.csv'\n",
-    "\n",
-    "# Some methods use AHN elevation data to determine the height above ground.\n",
-    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "0ec7ecd1-c736-4777-9bf5-03abb54f7849",
    "metadata": {},
    "outputs": [],
@@ -69,6 +51,28 @@
     "log_utils.add_console_logger()\n",
     "# All messages will be printed to a file. Use `clear_log` flag to clear the log file, if desired.\n",
     "log_utils.add_file_logger(logfile, clear_log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cf2883a-1fd1-4c20-849f-5f7103c802a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set-up data files.\n",
+    "\n",
+    "# AHN data folder.\n",
+    "ahn_data_folder = '../datasets/ahn/'\n",
+    "# File with BGT road polygons.\n",
+    "bgt_road_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
+    "# File with BGT building polygons.\n",
+    "bgt_building_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
+    "# File with <x,y> coordinates of pole-like objects.\n",
+    "bgt_point_file = '../datasets/bgt/custom_points_demo.csv'\n",
+    "\n",
+    "# Some methods use AHN elevation data to determine the height above ground.\n",
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
    ]
   },
   {
@@ -93,8 +97,8 @@
    "outputs": [],
    "source": [
     "# Ground fuser using pre-processed AHN data.\n",
-    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder,\n",
-    "                                   method='npz', target='ground', epsilon=0.2)\n",
+    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder, ahn_reader,\n",
+    "                                   target='ground', epsilon=0.2)\n",
     "# Building fuser using BGT building footprint data and AHN data for the maximum height, if available.\n",
     "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=0.25, bgt_file=bgt_building_file, ahn_reader=ahn_reader)"
    ]
@@ -262,7 +266,7 @@
     "# Set-up pipeline.\n",
     "process_sequence = (npz_ground_fuser, noise_filter, bgt_building_fuser, car_fuser, tree_fuser,\n",
     "                    light_fuser, sign_fuser, building_grower, light_grower, sign_grower, tree_grower)\n",
-    "pipeline = Pipeline(process_sequence)"
+    "pipeline = Pipeline(processors=process_sequence, ahn_reader=ahn_reader, caching=True)"
    ]
   },
   {
@@ -283,7 +287,7 @@
    "source": [
     "# Select the file to process.\n",
     "tile_code = '2386_9702'  # Demo tile 1.\n",
-    "#tile_code = '2397_9705'  # Demo tile 2.\n",
+    "# tile_code = '2397_9705'  # Demo tile 2.\n",
     "\n",
     "in_file = '../datasets/pointcloud/filtered_' + tile_code + '.laz'\n",
     "out_file = '../datasets/pointcloud/processed_' + tile_code + '.laz'"
