--- a/notebooks/5. Region growing.ipynb
+++ b/notebooks/5. Region growing.ipynb
@@ -22,6 +22,7 @@
     "\n",
     "import src.region_growing as growing\n",
     "import src.utils.ahn_utils as ahn_utils\n",
+    "from src.region_growing.region_growing import RegionGrowing\n",
     "from src.utils.labels import Labels\n",
     "from src.pipeline import Pipeline"
    ]
@@ -145,8 +146,8 @@
    "outputs": [],
    "source": [
     "# Set-up region growing based on PCL pipeline.\n",
-    "growers = (region_growing_pcl,)\n",
-    "pipeline = Pipeline(process_sequence=growers, exclude_labels=exclude_labels)"
+    "process_sequence = (region_growing_pcl,)\n",
+    "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
    ]
   },
   {
@@ -156,8 +157,8 @@
    "outputs": [],
    "source": [
     "# Set-up clustering based region growing pipeline.\n",
-    "growers = (region_growing_clustering,)\n",
-    "pipeline = Pipeline(process_sequence=growers, exclude_labels=exclude_labels)"
+    "process_sequence = (region_growing_clustering,)\n",
+    "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
    ]
   },
   {
@@ -167,8 +168,8 @@
    "outputs": [],
    "source": [
     "# Set-up layer based region growing pipeline.\n",
-    "growers = (layered_region_growing,)\n",
-    "pipeline = Pipeline(process_sequence=growers, exclude_labels=exclude_labels)"
+    "process_sequence = (layered_region_growing,)\n",
+    "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
    ]
   },
   {
