Updated visualisations in notebooks.

--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -33,23 +33,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f62d5f5-6bd7-4ec0-9232-2b2f79fe907d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set-up.\n",
+    "\n",
+    "# The point cloud tile for which a corresponding AHN tile should be created.\n",
+    "tile_code = '2386_9702'\n",
+    "filename = '../datasets/pointcloud/filtered_' + tile_code + '.laz'\n",
+    "\n",
+    "# The folder where AHN data will be saved.\n",
+    "ahn_data_folder = '../datasets/ahn/'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "de6d646d-51ab-49ac-9555-9a74138ce08d",
    "metadata": {},
    "source": [
     "## 1a. Clip a single file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6cbcb896-ef19-4c14-9b9b-6f84bb999a94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The point cloud tile for which a corresponding AHN tile should be created.\n",
-    "filename = '../datasets/pointcloud/filtered_2386_9702.laz'\n",
-    "tile_code = las_utils.get_tilecode_from_filename(filename)"
    ]
   },
   {
@@ -86,7 +91,7 @@
    "source": [
     "# Clip the corresponding AHN point cloud tile.\n",
     "start = time.time()\n",
-    "ahn_preprocessing.clip_ahn_las_tile(ahn_cloud, filename, out_folder='../datasets/ahn/', buffer=1)\n",
+    "ahn_preprocessing.clip_ahn_las_tile(ahn_cloud, filename, out_folder=ahn_data_folder, buffer=1)\n",
     "end = time.time()\n",
     "print(f'Tile clipped in {end-start:.2f} seconds.')"
    ]
@@ -109,10 +114,9 @@
    "outputs": [],
    "source": [
     "las_folder = '../datasets/pointcloud/'\n",
-    "out_folder = '../datasets/ahn/'\n",
     "\n",
     "# Set resume=True to skip existing files in the out_folder.\n",
-    "ahn_preprocessing.clip_ahn_las_folder(ahn_cloud, las_folder, out_folder=out_folder, buffer=1, resume=False)"
+    "ahn_preprocessing.clip_ahn_las_folder(ahn_cloud, las_folder, out_folder=ahn_data_folder, buffer=1, resume=False)"
    ]
   },
   {
@@ -131,16 +135,24 @@
    "outputs": [],
    "source": [
     "# Load the clipped tile that we have just created.\n",
-    "ahn_las_file = '../datasets/ahn/ahn_2386_9702.laz'\n",
+    "ahn_las_file = ahn_data_folder + '/ahn_' + tile_code + '.laz'\n",
     "\n",
     "start = time.time()\n",
     "# This will create the AHN ground and building surfaces, with a 0.1m resolution, and save them as an .npz file.\n",
-    "_file = ahn_preprocessing.process_ahn_las_tile(ahn_las_file, out_folder='../datasets/ahn/')\n",
+    "_file = ahn_preprocessing.process_ahn_las_tile(ahn_las_file, out_folder=ahn_data_folder)\n",
     "end = time.time()\n",
-    "print(f'Processed LAS tile in {end-start:.2f}s.')\n",
-    "\n",
+    "print(f'Processed LAS tile in {end-start:.2f}s.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19462d26-e59c-40b8-ab1f-2f93d5f35390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load the result.\n",
-    "ahn_tile = ahn_utils.load_ahn_tile(_file)"
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
    ]
   },
   {
@@ -151,7 +163,8 @@
    "outputs": [],
    "source": [
     "# Optional: plot the resulting surfaces.\n",
-    "plot_utils.plot_ahn_sidebyside(ahn_tile)"
+    "%matplotlib widget\n",
+    "plot_utils.plot_ahn_sidebyside(tile_code, ahn_reader)"
    ]
   },
   {
