--- a/notebooks/Visualisations.ipynb
+++ b/notebooks/Visualisations.ipynb
@@ -41,7 +41,7 @@
     "# AHN data folder.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
     "# File with BGT building polygons.\n",
-    "bgt_building_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
+    "bgt_building_file = '../datasets/bgt/bgt_buildings.csv'\n",
     "# File with BGT road polygons.\n",
     "bgt_road_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
     "# File with <x,y> coordinates of pole-like objects.\n",
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_utils.plot_buildings_ahn_bgt(tilecode, ahn_reader, bgt_building_file, offset=1)"
+    "plot_utils.plot_buildings_ahn_bgt(tilecode, ahn_reader, bgt_building_file, offset=1, show_elevation=False, offset_only=False)"
    ]
   },
   {
